@@ -2,6 +2,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==12/17/2012==
 Sorvani: Added the RoF.cpp files to the patches folder of the project for the windows people.
+Akkadius: Added EntityList::GetDoorsByDoorID(int32 id) which is exported to Perl $entity_list->GetDoorsByDoorID
+Akkadius: Added Door Class object $Door->GetDoorID(); to return the obvious Door ID for the entity
 
 ==12/15/2012==
 Trevius: Initial addition of the RoF client.  Currently disabled by default.  Uncomment the 2 RoF lines in common/patches/patches.cpp to enable the client.
